test/parser.d/invalid/reassign3.souc.bad
x: Int = 5

main() = do
	x <- 5
	print $x
